# q2manager

./: .gitignore  CMakeLists.txt  README.md  build-lin.sh  q2manager.desktop.example
src/: main.cpp
